--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -41,6 +41,7 @@ div.project_row {
         }
 
         .project_description {
+            margin: v.$sp_xsm 0 0;
 			text-align: left;
     
             p {
